--- a/Markup/markup.css
+++ b/Markup/markup.css
@@ -15,7 +15,7 @@ body {
 .sections {
     margin-left: 10%;
     display: grid;
-    grid-template-columns: 15% 15% 15%;
+    grid-template-columns: 15% 15%;
 }
 
 @keyframes identation {
