--- a/Markup/markup.css
+++ b/Markup/markup.css
@@ -2,6 +2,7 @@
     font-family: "JetBrains Mono", monospace;
 }
 
+
 body {
     height: 100%;
     display: flex;
@@ -10,12 +11,6 @@ body {
     background-color: #cccccc;
     background-size: cover;
     background-attachment: fixed;
-}
-
-.sections {
-    margin-left: 10%;
-    display: grid;
-    grid-template-columns: 15% 15%;
 }
 
 @keyframes identation {
@@ -48,6 +43,12 @@ a {
     color: #FFFFFF;
     margin-left: 3%;
     margin-top: 15px;
+}
+
+.sections {
+    margin-left: 10%;
+    display: grid;
+    grid-template-columns: 10% 10%;
 }
 
 .section {
@@ -116,4 +117,69 @@ a {
     margin-right: 10%;
     width: 50%;
     width: fit-content;
+}
+
+.flag {
+    width: "40px";
+    height: "40px";
+}
+
+@media only screen and (max-device-width: 1500px) and (min-device-width: 1200px){
+    .card {
+        grid-template-columns: 80% auto;
+    }
+}
+
+@media only screen and (max-device-width: 1200px) {
+    .card {
+        position: relative;
+        margin-top: 20px;
+        margin-left: 5%;
+        margin-right: 5%;
+        font-size: 10pt;
+        width: 50%;
+        width: fit-content;
+        background-color: #703777;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+        color: #FFEEEE;
+        display: grid;
+        grid-template-columns: 76% auto;
+    }
+
+    .card:hover {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .sections {
+        margin-left: 5%;
+        display: unset;
+        grid-template-columns: unset;
+    }
+
+    .section {
+        margin-top: 60px;
+        margin-bottom: 60px;
+        font-size: 20px;
+        color: #FFEEEE;
+    }
+
+    .blocktext {
+        margin-left: 5%;
+        margin-right: 5%;
+        font-size: 10pt;
+    }
+
+    .languages {
+        display: table-column;
+        margin: 0;
+        margin-top: 20px;
+        margin-left: 10%;
+    }
+
+    .flag {
+        width: "80px";
+        height: "80px";
+    }
 }
